--- a/Auth/Properties/launchSettings.json
+++ b/Auth/Properties/launchSettings.json
@@ -4,23 +4,23 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:61248",
-      "sslPort": 44392
+      "applicationUrl": "http://localhost:53237",
+      "sslPort": 44380
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": false,
-      "launchUrl": "auth/sign-up",
+      "launchBrowser": true,
+      "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "InventoryManagement": {
+    "Auth": {
       "commandName": "Project",
-      "launchBrowser": false,
-      "launchUrl": "auth/sign-up",
+      "launchBrowser": true,
+      "launchUrl": "api/values",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
